  * Automatically create a "Transfer" ChargeType when creating a new account.
  * Select Entries to put together as a PDF Report
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0

== 1.7.0

* Enhancements
  * Updating to Contour 1.0.2 and Twitter Bootstrap CSS/JS framework
  * Updating to Ruby 1.9.3-p194
  * Updating to Rails 3.2.6

== 1.6.0

* Enhancements
  * GUI updated to use contour-minimalist theme

* Refactoring
  * Updated to Rails 3.2.2 and Contour 0.10.2

== 1.5.1

* Bug Fix
  * Arrow keys no longer change the calendar month when focus is on a text input

== 1.5.0

* Enhancements
  * Entries can now be created from the calendar by double clicking on a date

* Refactoring
  * Updated to Rails 3.2.1 and fixed Devise 2.0.0 locales file

* Bug Fix
  * Entry name autocomplete fixed

== 1.4.2

* Bug Fix
  * Devise migrations fixed for Devise 2.0.0

== 1.4.1

* Refactoring
  * Gem dependencies updated:
    * Rails 3.2.0
    * Contour ~> 0.9.3
  * Devise migration and configuration file updated
  * Environment files updated to be in sync with Rails 3.2.0

== 1.4.0

* Enhancements
  * Update to Rails 3.2.0.rc2 and Contour 0.9.0
  * Updated jQuery Calls to use jQuery 1.7 specification (.live to .on)
  * Removed JavaScript functions that are provided by Contour
  * Existing entries can now be copied as templates for new entries

* Refactoring
  * Moved root path to be the entries calendar

* Bug Fix
  * Graphs now render correctly in IE7 and IE8
  * Autocomplete now works correctly when using a subdomain

* Testing
  * Test Coverage is now at 100% with help of SimpleCov
  * Continuous integration using TravisCI, http://travis-ci.org/remomueller/balance

== 1.3.0

* Enhancements
  * Update Rails to 3.1.1 and Contour 0.5.6
  * Changing months now uses jQuery Slide transition on the Month Overview
  * Clicking left and right in Month Overview will transition between months