@@ -30,7 +30,7 @@
                    <%= 'next-month' if iDate > @end_date %>"
             onmouseover="$(this).addClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').show();"
             onmouseout="$(this).removeClass('hover');$('#calendar_box_<%= first_day_offset %>_new_entry_link').hide();"
-            ondblclick="$('#entry_billing_date').val('<%= iDate.strftime('%m/%d/%Y') %>'); $('#new-entry-dialog').dialog('open');">
+            ondblclick="openCalendarPopup('<%= iDate.strftime('%m/%d/%Y') %>');">
           <div style="width:100%">
             <div class="calendar-entry-heading">
               <%= link_to image_tag('001_46.png', style: 'border:none;vertical-align:text-bottom', size: '11x11', title: "New Entry for #{iDate.strftime("%B %e, %Y")}"), new_entry_path(entry: {billing_date: iDate}, from_calendar: 1), style: 'display:none', id: "calendar_box_#{first_day_offset}_new_entry_link" %>
