@@ -1,0 +1,4 @@
+$('#new-entry-dialog').modal('hide');
+$('#new_entry')[0].reset();
+$('.error').removeClass('error');
+$('#search-form').submit();
