@@ -1,100 +1,0 @@
-<% if user_signed_in? -%>
-  <div style="float:right">
-    <%= link_to_function current_user.name, "$('#menu_user_settings').show();", onmouseover: "$('#menu_user_settings').show();" %>
-    <div style="position:relative">
-      <div id="menu_user_settings" class="menu_dropdown_right" style="display:none">
-        <div style="white-space:nowrap"><%= current_user.name %></div>
-        <div class="quiet small"><%= current_user.email %></div>
-<% if false %>        <div><%= link_to 'Settings', settings_path %></div><% end %>
-        <div><%= link_to 'Logout', destroy_user_session_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left">
-    <%= link_to_function 'Home', "$('#menu_home').show();", onmouseover: "$('#menu_home').show();" %>
-    <div style="position:relative;">
-      <div id="menu_home" class="menu_dropdown_left" style="display:none">
-        <div><%= link_to 'Home', root_path %></div>
-        <div><%= link_to 'Current Balance', current_balance_entries_path %></div>
-        <div><%= link_to 'Averages', averages_entries_path %></div>
-<% if false %>        <div><%= link_to 'About', about_path %></div><% end %>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left;width:10px">&nbsp;</div>
-
-  <div style="float:left">
-    <%= link_to_function 'Graphs', "$('#menu_graphs').show();", onmouseover: "$('#menu_graphs').show();" %>
-    <div style="position:relative;">
-      <div id="menu_graphs" class="menu_dropdown_left_center" style="display:none">
-        <div><%= link_to 'Graphs', overview_entries_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left;width:10px">&nbsp;</div>
-
-  <div style="float:left">
-    <%= link_to_function 'Accounts', "$('#menu_accounts').show();", onmouseover: "$('#menu_accounts').show();" %>
-    <div style="position:relative;">
-      <div id="menu_accounts" class="menu_dropdown_left_center" style="display:none">
-        <div><%= link_to 'Accounts', accounts_path %></div>
-        <div><%= link_to '&raquo;New'.html_safe, new_account_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left;width:10px">&nbsp;</div>
-
-  <div style="float:left">
-    <%= link_to_function 'Charge Types', "$('#menu_charge_types').show();", onmouseover: "$('#menu_charge_types').show();" %>
-    <div style="position:relative;">
-      <div id="menu_charge_types" class="menu_dropdown_left_center" style="display:none">
-        <div style="white-space:nowrap"><%= link_to 'Charge Types', charge_types_path %></div>
-        <div><%= link_to '&raquo;New'.html_safe, new_charge_type_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left;width:10px">&nbsp;</div>
-
-  <div style="float:left">
-    <%= link_to_function 'Entries', "$('#menu_entries').show();", onmouseover: "$('#menu_entries').show();" %>
-    <div style="position:relative;">
-      <div id="menu_entries" class="menu_dropdown_left_center" style="display:none">
-        <div><%= link_to 'Entries', entries_path %></div>
-        <div><%= link_to '&raquo;New'.html_safe, new_entry_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <%= javascript_tag "hideOnMouseOut(['#menu_user_settings', '#menu_home', '#menu_graphs', '#menu_accounts', '#menu_charge_types', '#menu_entries']);" %>
-<% else %>
-  <div style="float:right" onmouseover="$('#menu_user_settings').show();">
-    <%= link_to_function 'Login', "$('#menu_user_settings').show();" %>
-    <div style="position:relative">
-      <div id="menu_user_settings" class="menu_dropdown_right" style="display:none">
-        <div><%= link_to 'Login', new_user_session_path %></div>
-        <hr>
-        <div style="white-space:nowrap"><%= link_to 'Sign Up', new_user_registration_path %></div>
-      </div>
-    </div>
-  </div>
-
-  <div style="float:left">
-    <%= link_to_function 'Home', "$('#menu_home').show();", onmouseover: "$('#menu_home').show();" %>
-    <div style="position:relative;">
-      <div id="menu_home" class="menu_dropdown_left" style="display:none">
-        <div><%= link_to 'Home', root_path %></div>
-        <hr>
-        <div>About</div>
-<% if false %>        <div><%= link_to 'About', about_path %></div><% end %>
-      </div>
-    </div>
-  </div>
-  <%= javascript_tag "hideOnMouseOut(['#menu_user_settings', '#menu_home']);" %>
-<% end %>
-
-<div style="clear:both"></div>
