@@ -1,40 +1,0 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= [DEFAULT_APP_NAME, @title].compact.join(' - ').html_safe %></title>
-    <%= favicon_link_tag %>
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tag %>
-
-    <%= yield :script %>
-    <%# TODO: remove < % content_for :script do % > tags, then remove yield :script %>
-  </head>
-
-  <body>
-    <%= javascript_tag "var root_url='#{SITE_URL + '/'}';var auth_token='#{form_authenticity_token}';" %>
-    <div id="header" class="container" style="background-image: url(<%= SITE_URL %>/assets/backdrop_faded.png);">
-      <div id="version" style="position:relative;display:none">
-        <span style="position:absolute;top:25px;left:60px;font-size:0.5em;font-variant:normal;line-height:0em" class="quiet"><%= Balance::VERSION::STRING %></span>
-      </div>
-      <%#= image_tag('balance.png', alt: '', style: 'vertical-align:middle') %>
-      <%= link_to DEFAULT_APP_NAME, root_path, style: 'text-decoration:none;color:#404040;', onmouseover: "$('#version').show();", onmouseout: "$('#version').hide();" %>
-    </div>
-
-    <div class="container" style="position:relative">
-      <div id="message">
-        <%= render partial: 'layouts/message' %>
-      </div>
-    </div>
-
-    <div style="height:29px">
-      <div id="menu" class="container">
-        <%= render partial: 'layouts/menu' %>
-      </div>
-    </div>
-
-    <div id="content" class="container">
-      <%= yield %>
-    </div>
-  </body>
-</html>
