@@ -14,6 +14,9 @@
   * Updating to Ruby 1.9.3-p194
   * Updating to Rails 3.2.6
 
+* Bug Fix
+  * Entries amounts added with dollar signs, commas, and trailing or leading spaces are now correctly parsed
+
 == 1.6.0
 
 * Enhancements
